--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -178,7 +178,6 @@
     }
    ],
    "source": [
-    "\n",
     "# fetch dataset \n",
     "cervical_cancer_risk_factors = fetch_ucirepo(id=383) \n",
     "  \n",
@@ -368,6 +367,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Limpieza de Datos\n",
+    "\n",
+    "En esta sección, se revisan los valores nulos presentes en el conjunto de datos. Se utiliza el método `isnull()` junto con `sum()` para contar la cantidad de valores nulos por columna."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
@@ -422,11 +430,14 @@
     "# 2. Limpieza de Datos\n",
     "# Revisar valores nulos\n",
     "print(\"\\nValores nulos por columna:\")\n",
-    "print(data.isnull().sum())\n",
-    "\n",
-    "# Si hay valores nulos, se pueden manejar de diferentes maneras\n",
-    "# Por ejemplo, llenar con la media:\n",
-    "# data = data.fillna(data.mean())"
+    "print(data.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este proceso de limpieza de datos, se realiza una imputación de valores nulos en varias columnas relacionadas con el historial de salud y hábitos de los sujetos. Se decide reemplazar los valores nulos con 0, lo que implica que, para las columnas como \"Smokes\", \"Hormonal Contraceptives\" y diversas categorías de ETS, se considera que la ausencia de datos indica la no ocurrencia de las situaciones encontradas."
    ]
   },
   {
