--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -1004,6 +1004,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Inciso 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Age:** Cuantitativa Discreta\n",
+    "- **Number.of.sexual.partners:** Cuantitativa Discreta\n",
+    "- **First.sexual.intercourse:** Cuantitativa Discreta\n",
+    "- **Num.of.pregnancies:** Cuantitativa Discreta\n",
+    "- **Smokes:** Cualitativa Categórica\n",
+    "- **Smokes.years:** Cuantitativa Discreta\n",
+    "- **Smokes.packs.per.year:** Cauntitativa Discreta\n",
+    "- **Hormonal.Contraceptives:** Cualitativa Categórica\n",
+    "- **Hormonal.Contraceptives.years:** Cuantitativa Discreta\n",
+    "- **IUD:** Cualitativa Categórica\n",
+    "- **IUD.years:** Cuantitativa Discreta\n",
+    "- **STDs:** Cualitativa Categórica\n",
+    "- **STDs.number:** Cuantitativa Discreta\n",
+    "- **STDs.condylomatosis:** Cualitativa Categórica\n",
+    "- **STDs.cervical.condylomatosis:** Cualitativa Categórica\n",
+    "- **STDs.vaginal.condylomatosis:** Cualitativa Categórica\n",
+    "- **STDs.vulvo.perineal.condylomatosis:** Cualitativa Categórica\n",
+    "- **STDs.syphilis:** Cualitativa Categórica\n",
+    "- **STDs.pelvic.inflammatory.disease:** Cualitativa Categórica\n",
+    "- **STDs.genital.herpes:** Cualitativa Categórica\n",
+    "- **STDs.molluscum.contagiosum:** Cualitativa Categórica\n",
+    "- **STDs.AIDS:** Cualitativa Categórica\n",
+    "- **STDs.HIV:** Cualitativa Categórica\n",
+    "- **STDs.Hepatitis.B:** Cualitativa Categórica\n",
+    "- **STDs.HPV:** Cualitativa Categórica\n",
+    "- **STDs.Number.of.diagnosis:** Cuantitativa Discreta\n",
+    "- **STDs.Time.since.first.diagnosis:** Cuantitativa Contínua\n",
+    "- **STDs.Time.since.last.diagnosis:** Cuantitativa Contínua\n",
+    "- **Diagnósticos:**\n",
+    "    - **Dx.Cancer:** Cualitativa Categórica\n",
+    "    - **Dx.CIN:** Cualitativa Categórica\n",
+    "    - **Dx.HPV:** Cualitativa Categórica\n",
+    "    - **Dx:** Cualitativa Categórica\n",
+    "- **Pruebas para diagnosticar**\n",
+    "    - **Hinselmann:** Cualitativa Categórica\n",
+    "    - **Schiller:** Cualitativa Categórica\n",
+    "    - **Citology:** Cualitativa Categórica\n",
+    "    - **Biopsy:** Cualitativa Categórica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Inciso 4\n"
    ]
   },
