--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -1877,6 +1877,20 @@
     "kmo,kmo_modelo = calculate_kmo(numerical_data)\n",
     "kmo_modelo"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inciso 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
